[package]
name = "ryu"
version = "1.0.23"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["value-formatting", "no-std", "no-std::no-alloc"]
description = "Fast floating point to string conversion"
documentation = "https://docs.rs/ryu"
edition = "2021"
exclude = ["build.rs", "*.png"]
keywords = ["float"]
license = "Apache-2.0 OR BSL-1.0"
repository = "https://github.com/dtolnay/ryu"
rust-version = "1.71"

[features]
# Use smaller lookup tables. Instead of storing every required power of
# 5, only store every 26th entry, and compute intermediate values with a
# multiplication. This reduces the lookup table size by about 10x (only
# one case, and only f64) at the cost of some performance.
small = []

[dependencies]
no-panic = { version = "0.1", optional = true }
# ETNA benchmark runner framework dependencies (used by src/bin/etna.rs
# and src/etna.rs — the workload's property-based test harness).
proptest = "1.0"
quickcheck = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master", features = ["etna"] }
crabcheck = { git = "https://github.com/alpaylan/crabcheck.git", branch = "main" }
hegeltest = "0.3.7"
rand = "0.9"

[dev-dependencies]
serde_json = "1"
num_cpus = "1.8"
rand = "0.10"
rand_core = "0.10"
rand_xorshift = "0.5"

[target.'cfg(not(miri))'.dev-dependencies]
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "etna-faultloc"
path = "src/bin/etna-faultloc.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
